# tgo-agents-sdk

./: .gitignore  DEBUG_MCP_TOOLS.md  ELEGANT_TOOL_DESIGN.md  GOOGLE_ADK_ADAPTER_OPTIMIZATION.md  GOOGLE_ADK_MODIFICATIONS_SUMMARY.md  README.md  README_CN.md  SESSION_MEMORY_README.md  TEST_RESULTS.md  basic_session_memory_example.py  debug_example.py  demo_google_adk_required.py  example.py  fastmcp_simple_server.py  google_adk_adapter_optimization_summary.md  memory_injection_demo.py  pyproject.toml  pyrightconfig.json  pytest.ini  run_tests.py  session_memory_example.py  simple_mcp_server.py  simple_session_memory_test.py  test_basic_usage.py  test_example.py  test_mcp_deepcopy_fix.py  test_mcp_direct.py  test_mcp_threading.py
.github/workflows/: tests.yml
src/: __init__.py
src/adapters/: base_adapter.py  crewai_adapter.py  google_adk_adapter.py  langgraph_adapter.py
src/coordinator/: __init__.py  multi_agent_coordinator.py  result_aggregator.py  task_executor.py  workflow_engine.py
src/core/: enums.py  interfaces.py  models.py
src/memory/: __init__.py  in_memory_memory_manager.py  in_memory_session_manager.py
src/registry/: __init__.py  adapter_registry.py
src/utils/: config_validator.py
src/workflows/: __init__.py  base_workflow.py  hierarchical_workflow.py  parallel_workflow.py  sequential_workflow.py
tests/: README.md  __init__.py  conftest.py  test_adapter_registry.py  test_base_adapter.py  test_config.py  test_core_models.py  test_framework_google_adk_adapter.py  test_google_adk_adapter.py  test_google_adk_adapter_required.py  test_hierarchical_workflow.py  test_integration.py  test_mcp_integration.py  test_mcp_security.py  test_mcp_tools.py  test_multi_agent_coordinator.py  test_workflow_engine.py
tgo/: __init__.py
tgo/agents/: __init__.py
tgo/agents/adapters/: __init__.py  base_adapter.py  crewai_adapter.py  google_adk_adapter.py  langgraph_adapter.py
tgo/agents/coordinator/: multi_agent_coordinator.py  result_aggregator.py  task_executor.py  (+1 more)
(+17 files in other folders)
