[tool.poetry]
name = "tgo-agents-sdk"
version = "0.1.0"
description = "multi-agent sdk"
authors = ["TGO Team"]
readme = "README.md"
packages = [{include = "tgo/agents"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
aiohttp = "^3.12.13"
google-adk = "^1.4.1"
fastmcp = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
pyright = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.pyright]
include = ["tgo/agents"]
exclude = ["**/__pycache__"]
strict = ["tgo/agents"]
reportMissingImports = true
reportMissingTypeStubs = false
reportCallIssue = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportArgumentType = false
reportUnknownArgumentType = false
reportPossiblyUnboundVariable = false
reportUnnecessaryIsInstance = false
pythonVersion = "3.11"
